# tabletennis-player-classify

./: .gitignore  README.md  pyproject.toml  ruff.toml
data/: sample_submission.csv
src/: decision_tree.ipynb  decision_tree.py  k_neighbor.ipynb  k_neighbor.py  mlp_classifier.ipynb  multilayer_perceptron.ipynb  multilayer_perceptron.py  random_forest.ipynb  random_forest.py  svc.ipynb
