[project]
name = "tabletenis-player-classify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kaggle>=1.6.17",
    "kagglehub>=0.3.3",
    "matplotlib>=3.9.2",
    "polars>=1.12.0",
    "scikit-learn>=1.5.2",
]

[tool.uv]
dev-dependencies = [
    "commitizen>=3.30.0",
    "pre-commit>=4.0.1",
]
